--- a/src/Flexio.API/appsettings.json
+++ b/src/Flexio.API/appsettings.json
@@ -1,5 +1,10 @@
 {
-    "AllowedHosts": "*",
+  "AllowedHosts": "*",
+  "AAD": {
+    "ResourceId": "api://f8050439-ce68-4177-92fe-3f118e097bad",
+    "InstanceId": "https://login.microsoftonline.com/",
+    "TenandId": "5a4863ed-40c8-4fd5-8298-fbfdb7f13095"
+  },
     "ConnectionStrings": {
     "SqlConnection": "server=(LocalDB)\\MSSQLLocalDB;database=Flexio-Local;Trusted_Connection=True;"
   }
