updated azure settings

--- a/src/Flexio.API/appsettings.json
+++ b/src/Flexio.API/appsettings.json
@@ -1,10 +1,9 @@
 {
   "AllowedHosts": "*",
-  "AAD": {
-    "ResourceId": "api://f8050439-ce68-4177-92fe-3f118e097bad",
-    "InstanceId": "https://login.microsoftonline.com/",
-    "TenandId": "5a4863ed-40c8-4fd5-8298-fbfdb7f13095"
-  },
+  "AzureAdB2c": {
+    "Authority": "https://flexioorg.b2clogin.com/flexioorg.onmicrosoft.com/B2C_1_SignUpAndSignIn/v2.0/",
+    "Audience": "d4267e8b-380a-4196-9494-70978fde199f"
+  } ,
     "ConnectionStrings": {
     "SqlConnection": "server=(LocalDB)\\MSSQLLocalDB;database=Flexio-Local;Trusted_Connection=True;"
   }
