--- a/src/Flexio.API/appsettings.json
+++ b/src/Flexio.API/appsettings.json
@@ -3,7 +3,12 @@
   "AzureAdB2c": {
     "Authority": "https://flexioorg.b2clogin.com/flexioorg.onmicrosoft.com/B2C_1_SignUpAndSignIn/v2.0/",
     "Audience": "d4267e8b-380a-4196-9494-70978fde199f"
-  } ,
+  },
+  "AzureGraph": {
+    "ApplicationId": "d4267e8b-380a-4196-9494-70978fde199f",
+    "DirectoryId": "59db32b8-ae53-49bc-950e-88f9be87aeb7",
+    "ClientSecret": "kEP7Q~slj4tj0JjQ-e92YZyJaD34iIGa0qc3."
+  },
     "ConnectionStrings": {
     "SqlConnection": "server=(LocalDB)\\MSSQLLocalDB;database=Flexio-Local;Trusted_Connection=True;"
   }
