--- a/src/Flexio.API/Flexio.API.csproj
+++ b/src/Flexio.API/Flexio.API.csproj
@@ -4,6 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+	<ItemGroup>
+        <Compile Remove="logs\**" />
+        <Content Remove="logs\**" />
+        <EmbeddedResource Remove="logs\**"/>
+        <None Remove="logs\**" />
+	</ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="10.3.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.0" />
