--- a/src/Flexio.Business/Flexio.Business.csproj
+++ b/src/Flexio.Business/Flexio.Business.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Flexio.Data\Flexio.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Users\Queries\" />
+  </ItemGroup>
+
 </Project>
