added azure storage service

--- a/src/Flexio.API/Flexio.API.csproj
+++ b/src/Flexio.API/Flexio.API.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Flexio.Azure.Graph\Flexio.Azure.Graph.csproj" />
+    <ProjectReference Include="..\Flexio.Azure.Storage\Flexio.Azure.Storage.csproj" />
     <ProjectReference Include="..\Flexio.Data\Flexio.Data.csproj" />
     <ProjectReference Include="..\Flexio.Business\Flexio.Business.csproj" />
   </ItemGroup>
