--- a/src/Flexio.Business/Flexio.Business.csproj
+++ b/src/Flexio.Business/Flexio.Business.csproj
@@ -22,6 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Comments\Commands\" />
+    <Folder Include="Comments\Handlers\" />
     <Folder Include="Utilities\" />
   </ItemGroup>
 
