--- a/src/Flexio.API/appsettings.json
+++ b/src/Flexio.API/appsettings.json
@@ -7,7 +7,7 @@
   "AzureGraph": {
     "ApplicationId": "d4267e8b-380a-4196-9494-70978fde199f",
     "DirectoryId": "59db32b8-ae53-49bc-950e-88f9be87aeb7",
-    "ClientSecret": "kEP7Q~slj4tj0JjQ-e92YZyJaD34iIGa0qc3.",
+    "ClientSecret": "RXn8Q~YWdmqBzyaz~qQAz~S4lgxkNgP5Afa6AbAB",
     "IdentityIssuer": "flexioorg.onmicrosoft.com"
   },
   "AzureStorage": {
