--- a/src/Flexio.Azure.Graph/Flexio.Azure.Graph.csproj
+++ b/src/Flexio.Azure.Graph/Flexio.Azure.Graph.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Serilog" Version="2.11.0" />
   </ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\Flexio.Data\Flexio.Data.csproj" />
+	</ItemGroup>
+
 </Project>
