--- a/src/Flexio.Business/Flexio.Business.csproj
+++ b/src/Flexio.Business/Flexio.Business.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Flexio.Azure.Graph\Flexio.Azure.Graph.csproj" />
     <ProjectReference Include="..\Flexio.Azure.Storage\Flexio.Azure.Storage.csproj" />
     <ProjectReference Include="..\Flexio.Data\Flexio.Data.csproj" />
   </ItemGroup>
